--- a/filme/templates/filme/base.html
+++ b/filme/templates/filme/base.html
@@ -29,9 +29,9 @@
             {% endif %}
             <h1><a href="/">JP Filmes</a></h1>
         </div>
-        <div class="content container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-8">
+                <div class="container-fluid">
                 {% block content %}
                 {% endblock %}
                 </div>
