--- a/filme/templates/filme/post_list.html
+++ b/filme/templates/filme/post_list.html
@@ -1,30 +1,39 @@
 {% extends 'filme/base.html' %}
 
 {% block content %}
+    <div class="titulo">
+        <h1>Filmes</h1>
+    </div>
+
+
     {% for post in posts %}
-        <article class="post">
-            {% if post.published_date %}
-                <time class="date">
-                    {{ post.published_date }}
-                </time>
-            {% else %}
-                <time class="date">
-                    No date
-                </time>
-            {% endif %}
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title|title }}</a></h2>
-            <p><strong>Ano:</strong> {{ post.text|linebreaksbr }}</p>
-            <p><strong>Duração:</strong> {{ post.text2|linebreaksbr }}</p><!--aqui-->
-            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
-        </article>
+        <div class="grupo">
+            <article class="post">
+                {% if post.published_date %}
+                    <time class="date">
+                        {{ post.published_date }}
+                    </time>
+                {% else %}
+                    <time class="date">
+                        No date
+                    </time>
+                {% endif %}
+                <h2>Nome: <a href="{% url 'post_detail' pk=post.pk %}">{{ post.title|title }}</a></h2>
+                <p><strong>Ano:</strong> {{ post.text|linebreaksbr }}</p>
+                <p><strong>Duração:</strong> {{ post.text2|linebreaksbr }}</p><!--aqui-->
+                <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
+            </article>
+        </div>
     {% endfor %}
 
-    <h2>Usuários</h2>
+
+
+    <!--<h2>Usuários</h2>
     {% for user in users %}
         <a href="{% url 'author_perfil' username=user.username %}">
             {{ user }}
         </a>
         {{ user }} <br />
-    {% endfor %}
+    {% endfor %}-->
 
 {% endblock %}
