--- a/filme/templates/filme/post_list.html
+++ b/filme/templates/filme/post_list.html
@@ -1,32 +1,36 @@
 {% extends 'filme/base.html' %}
 
 {% block content %}
+    <hr>
     <div class="titulo">
         <h1>Filmes</h1>
     </div>
-
+    <hr>
 
     {% for post in posts %}
         <div class="grupo">
-            <article class="post">
-                {% if post.published_date %}
-                    <time class="date">
-                        {{ post.published_date }}
-                    </time>
-                {% else %}
-                    <time class="date">
-                        No date
-                    </time>
-                {% endif %}
-                <h2>Nome: <a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo|title }}</a></h2>
-                <p><strong>Ano:</strong> {{ post.ano|linebreaksbr }}</p>
-                <p><strong>Duração:</strong> {{ post.duracao|linebreaksbr }}</p>
-                <p><strong>Gênero:</strong> {{ post.genero|linebreaksbr }}</p>
-                <p><strong>Descrição:</strong> {{ post.descricao|linebreaksbr }}</p>
 
-                <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
-            </article>
+            {% if post.published_date %}
+                <time class="novo">
+                    <strong>Data da publicação: </strong>{{ post.published_date }}
+                </time>
+            {% else %}
+                <time class="novo">
+                    <strong>No date</strong>
+                </time>
+            {% endif %}
+            <h2>Nome: <a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo|title }}</a></h2>
+            <p><strong>Ano:</strong> {{ post.ano|linebreaksbr }}</p>
+            <p><strong>Duração:</strong> {{ post.duracao|linebreaksbr }}</p>
+            <p><strong>Gênero:</strong> {{ post.genero|linebreaksbr }}</p>
+            <p><strong>Descrição:</strong> {{ post.descricao }}</p>
+
+            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
+
+
+
         </div>
+        <hr>
     {% endfor %}
 
 
