--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>JP Filmes</title>
+        <title>Django Girls blog</title>
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
@@ -14,8 +14,8 @@
 
     <body>
         <div class="page-header">
-            <a href="{% url 'post_list_blog' %}" class="top-menu">
-                <button type="button" name="button1">Blog</button>
+            <a href="{% url 'post_list' %}" class="top-menu">
+                <button type="button" name="button2">JP Filmes</button>
             </a>
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu">
@@ -24,17 +24,17 @@
                 <a href="{% url 'post_draft_list' %}" class="top-menu">
                     <i class="bi bi-pencil-square"></i>
                 </a>
-                <p class="top-menu">Olá, seja bem vindo {{ user.username }} <small>(<a href="{% url 'logout' %}">Sair</a>)</small></p>
+                <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
             {% else %}
                 <a href="{% url 'login' %}" class="top-menu">
                     <i class="bi bi-door-open"></i>
                 </a>
             {% endif %}
-            <h1><a href="/">JP Filmes</a></h1>
+            <h1><a href="{% url 'post_list_blog' %}">Django Girls Blog</a></h1>
         </div>
-        <div class="container-fluid">
+        <div class="content container">
             <div class="row">
-                <div class="container-fluid">
+                <div class="col-md-8">
                 {% block content %}
                 {% endblock %}
                 </div>
