--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,10 +18,10 @@
                 <button type="button" name="button2">JP Filmes</button>
             </a>
             {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu">
+                <a href="{% url 'post_new_blog' %}" class="top-menu">
                     <i class="bi bi-plus-square"></i>
                 </a>
-                <a href="{% url 'post_draft_list' %}" class="top-menu">
+                <a href="{% url 'post_draft_list_blog' %}" class="top-menu">
                     <i class="bi bi-pencil-square"></i>
                 </a>
                 <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
