--- a/filme/templates/filme/post_detail.html
+++ b/filme/templates/filme/post_detail.html
@@ -33,8 +33,8 @@
                                 </a>
                                 <br>
                             {% endif %}
-                            <p><strong>Autor: </strong> {{ comment.author }}</p>
-                            <p><strong>Comentário: </strong>{{ comment.text|linebreaks }}</p>
+                            <p><strong>Autor: </strong> {{ comment.autor }}</p>
+                            <p><strong>Comentário: </strong>{{ comment.texto }}</p>
                         </div>
                     {% endif %}
                 </div>
