Atualizações nos templates, e no app blog.

--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,9 +1,6 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <strong>
-        Usuário: {{ author.first_name }} ({{ author.username }})
-    </strong>
     {% for post in posts %}
         <article class="post">
             {% if post.published_date %}
@@ -15,11 +12,18 @@
                     No date
                 </time>
             {% endif %}
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            <h2><a href="{% url 'post_detail_blog' pk=post.pk %}">{{ post.title|title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
+            <a href="{% url 'post_detail_blog' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
         </article>
-    {% empty %}
-        <h3>No posts yet =/</h3>
+    {% endfor %}
+
+    <h2>Usuários</h2>
+    {% for user in users %}
+        <a href="{% url 'author_perfil' username=user.username %}">
+            {{ user }}
+        </a>
+        {{ user }} <br />
     {% endfor %}
 
 {% endblock %}
