--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -35,18 +35,18 @@
                     {{ post.published_date }}
                 </div>
             {% else %}
-                <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">
+                <a class="btn btn-default" href="{% url 'post_publish_blog' pk=post.pk %}">
                     <i class="bi bi-box-arrow-in-right"></i>
                 </a>
             {% endif %}
 
             {% if user.is_authenticated %}
-                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
+                <a class="btn btn-default" href="{% url 'post_edit_blog' pk=post.pk %}">
                     <i class="bi bi-pencil"></i>
                 </a>
             {% endif %}
 
-            <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">
+            <a class="btn btn-default" href="{% url 'post_remove_blog' pk=post.pk %}">
                 <i class="bi bi-file-earmark-x"></i>
             </a>
 
