--- a/templates/filme/post_draft_list.html
+++ b/templates/filme/post_draft_list.html
@@ -6,7 +6,7 @@
             <div class="novo">
                 <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
             </div>
-            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo }}</a></h1>
+            <h1><strong>Nome: </strong><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo }}</a></h1>
             <p><strong>Ano:</strong> {{ post.ano|linebreaksbr }}</p>
             <p><strong>Duração:</strong> {{ post.duracao|linebreaksbr }}</p>
             <p><strong>Gênero:</strong> {{ post.genero|linebreaksbr }}</p>
