Formulário de criação de usurios.

--- a/templates/filme/base.html
+++ b/templates/filme/base.html
@@ -29,6 +29,9 @@
                 <a href="{% url 'login' %}" class="top-menu">
                     <i class="bi bi-door-open"></i>
                 </a>
+                <a href="{% url 'sigup' %}" class="top-menu">
+                    <i class="bi bi-person-plus"></i>
+                </a>
             {% endif %}
             <h1><a href="/">JP Filmes</a></h1>
         </div>
