--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -31,8 +31,11 @@
                     {{ form.as_p }}
 
                     <input type="submit" name="" value="login" />
-
                     </form>
+                    <br />
+                    <a href="{% url 'password_reset' %}">
+                        Esqueceu sua senha?
+                    </a>
 
                 </div>
             </div>
