--- a/templates/registration/sigup.html
+++ b/templates/registration/sigup.html
@@ -1,10 +1,7 @@
 {% extends 'filme/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <h1>Sig Up!</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Sign Up">
-    </form>
+    <h2>Criar usuário!</h2>
+    {% crispy form %}
 {% endblock %}
