--- a/templates/filme/add_comment_to_post.html
+++ b/templates/filme/add_comment_to_post.html
@@ -1,9 +1,10 @@
 {% extends 'filme/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
     <h1>New comment</h1>
     <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit" class="save btn btn-default">Mandar</button>
     </form>
 {% endblock %}
