Corrigido as mensagens.

--- a/templates/filme/post_detail.html
+++ b/templates/filme/post_detail.html
@@ -99,11 +99,12 @@
 
                 </div>
             </div>
-
-
-
-        <!--</aside>-->
-
-
     </div>
+    {% if messages %}
+        {% for m in messages %}
+            <div class="alert alert-warning" role="alert">
+              {{ m }}
+            </div>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
