--- a/templates/filme/post_draft_list.html
+++ b/templates/filme/post_draft_list.html
@@ -13,4 +13,12 @@
             <p><strong>Descrição:</strong> {{ post.descricao }}</p>
         </div>
     {% endfor %}
+
+    {% if messages %}
+        {% for m in messages %}
+            <div class="alert alert-warning" role="alert">
+              {{ m }}
+            </div>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
