--- a/templates/filme/post_list.html
+++ b/templates/filme/post_list.html
@@ -27,10 +27,16 @@
 
             <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
 
-
-
         </div>
         <hr>
     {% endfor %}
+
+    {% if messages %}
+        {% for m in messages %}
+            <div class="alert alert-warning" role="alert">
+              {{ m }}
+            </div>
+        {% endfor %}
+    {% endif %}
 
 {% endblock %}
